feat: implement external subtitles api
